# SPINE

./: .gitignore  CHANNEL_DESIGN.md  README.md  calcium_wave_synapse.py  pyproject.toml  setup.cfg
documentation/: CALCIUM_DESIGN.md  CHANNEL_DESIGN.md  SYNAPSE_DESIGN.md
examples/: NEURON_wave.py  calcium_wave.py  calcium_wave_new.py  calcium_wave_synapse.py  calcium_wave_synapse_new.py  parallel_scaling_test.py  plasticity_demo.py  steady_voltage.py  synapseComm.py  volt.txt
src/spine/: __init__.py  cytosol.py  er.py  flux_components.py  graph.py  vdcc.py  writer.py
src/spine/cable_eq/: __init__.py  base.py  channels.py  current_model.py  factory.py
src/spine/solver/: __init__.py  discretization_matrices.py  helper.py  sbdf.py
src/spine/synapse/: __init__.py  base.py  calcium_coupled.py  channel.py  communicator.py  factory.py  model.py  receptors.py  temporal.py
src/spine/utils/: NeuronModel.py  __init__.py  math.py  settings.py  threading.py
