[metadata]
name = spine
version = 1.0.0
description = SPINE - Simulator for Plasticity and Integrated Neuronal Events
author = Zachary M. Miksis
author_email = miksis@temple.edu

[options]
packages = find:
package_dir =
    = src
# python_requires = >=3.8
# install_requires =
#     numpy>=2.2.4
#     scipy>=1.15.2

[options.packages.find]
where = src